# heretic

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  FP8_NVFP4_CHANGES.md  README.md  WINDOWS_ROCM.md  colab_heretic_falcon_h1r.ipynb  config.default.toml  config.nohumor.toml  config.noslop.toml  config.nosyco.toml  config.test.toml  config.toml  judge.default.toml  lefthook.yml  main.py  mise.toml  pyproject.rdna2.toml  pyproject.rdna3.toml  pyproject.rdna4.toml  pyproject.toml  requirements-vllm.txt  run_heretic.py  run_mlx.sh  test_falcon_full.bat  test_falcon_loading.bat  test_logic.py  test_lora.py  uv.lock.rdna2  uv.lock.rdna3  uv.lock.rdna4  verify_hybrid.py
.gemini/: styleguide.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml
docs/: plugin_guide.md
scripts/: patch_bitsandbytes.py  setup_rocm.py
scripts/vllm/: sample_chat_completion.ps1  sample_chat_completion.sh  serve.ps1  serve.sh
src/heretic/: analyzer.py  api_server.py  cli.py  config.py  core.py  evaluator.py  judge.py  llm_judge.py  main.py  metadata.py  mlx_model.py  model.py  model_card_utils.py  parameters.py  plugin.py  plugin_interface.py  plugins.py  refusal.py  refusal_classifier.py  reproduce.py  restore.py  schemas.py  scorer.py  som.py  system.py  tagger.py  test_external_plugin.py  utils.py  webui.py  webui_cli.py
src/heretic/api/: app.py  auth.py  conversion.py  models.py  routes.py  tasks.py
src/heretic/plugins/: classifier.py  keyword.py  refusal.py
src/heretic/scorer_plugins/: count_refusals.py
src/heretic/scorers/: __init__.py  count_refusals.py  keyword_rate.py  kl_divergence.py  llm_judge.py  refusal_rate.py
src/heretic/tagger_plugins/: keyword.py
src/heretic/taggers/: keyword.py
stubs/backports/: strenum.pyi
tests/: README.md  run_tests.py  test_cli.py  test_conditional_cleanup.py  test_config.py  test_llm_judge.py  test_mlx_memory.py  test_mlx_model.py  test_pytorch_fallback.py  test_scorers.py
tests/gemma-4e/: SHA256SUMS.ci  SHA256SUMS.ci2  SHA256SUMS.ci3  SHA256SUMS.linux  SHA256SUMS.windows  config.toml
tests/minicpm5/: config.toml
tests/mistral-3/: SHA256SUMS  SHA256SUMS.ci  SHA256SUMS.ci2  SHA256SUMS.linux  SHA256SUMS.windows  config.toml
tests/qwen2.5/: SHA256SUMS.ci2  config.toml
tests/qwen3.5-moe/: SHA256SUMS.ci  SHA256SUMS.linux  SHA256SUMS.windows  config.toml
